Added basic Offerings content

--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
     </div>
     <div class="well" id="offerings">
       <h2>Offerings</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+      <p>Here is a list of services offered:</p>
+      <h3>Basic Massage</h3>
+      <p>One hour long basic massage. $90</p>
+      <h3>Invigorating Massage</h3>
+      <p>Invigoration massage treatment. $90</p>
+      <h3>Relaxing Massage</h3>
+      <p>Relaxing massage treatment. $90</p>
+      <h3>Deep Tissue Massage</h3>
+      <p>Deep tissue massage treatment. $120</p>
+      <h3>Hot Stone Massage</h3>
+      <p>Massage treatment using hot stones. $150</p>
     </div>
     <div class="well" id="hours">
       <h2>Hours</h2>
