--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
-    
+
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,47 +63,70 @@
     </div>
 
 
-    <div class="container theme-showcase" role="main">
+    <div class="container main" role="main">
 
-    <div class="well" id="about">
-      <h2>About</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-    </div>
-    <div class="well" id="offerings">
-      <h2>Offerings</h2>
-      <p>Here is a list of services offered:</p>
-      <h3>Basic Massage</h3>
-      <p>One hour long basic massage. $90</p>
-      <h3>Invigorating Massage</h3>
-      <p>Invigoration massage treatment. $90</p>
-      <h3>Relaxing Massage</h3>
-      <p>Relaxing massage treatment. $90</p>
-      <h3>Deep Tissue Massage</h3>
-      <p>Deep tissue massage treatment. $120</p>
-      <h3>Hot Stone Massage</h3>
-      <p>Massage treatment using hot stones. $150</p>
-    </div>
-    <div class="well" id="hours">
-      <h2>Hours</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-    </div>
-    <div class="well" id="location">
-      <h2>Location</h2>
-      <div class="map">
-      	<p>We are located at:</p>
-      		<address>
-					  <strong>Jane Doe, Massage Therapy</strong><br>
-					  1771 NW Pettygrove St<br>
-					  Suite 140<br>
-					  Portland, OR 97209<br>
-					  <abbr title="Phone">P:</abbr> (503) 555-1234
-					</address>
-      </div>
-      <div class="map">
-      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" frameborder="0" style="border:0"></iframe>
-      </div>
-    </div>
-    <div class="container">
+	    <div class="well" id="about">
+	      <h2>About</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+	    <div class="well" id="offerings">
+	      <h2>Offerings</h2>
+	      <p>Here is a list of services offered:</p>
+	      <h3>Basic Massage</h3>
+	      <p>One hour long basic massage. $90</p>
+	      <h3>Invigorating Massage</h3>
+	      <p>Invigoration massage treatment. $90</p>
+	      <h3>Relaxing Massage</h3>
+	      <p>Relaxing massage treatment. $90</p>
+	      <h3>Deep Tissue Massage</h3>
+	      <p>Deep tissue massage treatment. $120</p>
+	      <h3>Hot Stone Massage</h3>
+	      <p>Massage treatment using hot stones. $150</p>
+	    </div>
+	    <div class="well" id="hours">
+	      <h2>Hours</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+	    <div class="well" id="location">
+	      <h2>Location</h2>
+	      <div class="map">
+	      	<p>We are located at:</p>
+	      		<address>
+						  <strong>Jane Doe, Massage Therapy</strong><br>
+						  1771 NW Pettygrove St<br>
+						  Suite 140<br>
+						  Portland, OR 97209<br>
+						  <abbr title="Phone">P:</abbr> (503) 555-1234
+						</address>
+	      </div>
+	      <div class="map">
+	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" frameborder="0" style="border:0"></iframe>
+	      </div>
+	    </div>
+
+	    <div class="well" id="contact">
+	      <h2>Contact</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+	    <div class="well" id="links">
+	      <h2>Links</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+	    <div class="well" id="feedback">
+	      <h2>Feedback</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+
+	    <hr>
+
+		  <footer>
+		    <p>&copy; Company 2014</p>
+		  </footer>
+
+
+    </div> <!-- /container -->
+
+    <div class="container location">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
@@ -117,35 +140,8 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
       </div>
-
-
-
-
-
-
-
-
-    <div class="well" id="contact">
-      <h2>Contact</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-    </div>
-    <div class="well" id="links">
-      <h2>Links</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-    </div>
-    <div class="well" id="feedback">
-      <h2>Feedback</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
     </div>
 
-    <hr>
-
-	  <footer>
-	    <p>&copy; Company 2014</p>
-	  </footer>
-
-
-    </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
