Minor validation fixes, added alt tag, deleted frameborder attribute

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid banner">
       <div class="row-fluid">
         <div class="span12">
-          <img src="img/banner.jpg">
+          <img src="img/banner.jpg" alt="Banner image of massage rocks.">
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
 						</address>
 	      </div>
 	      <div class="map">
-	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" frameborder="0" style="border:0"></iframe>
+	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
 	      </div>
 	    </div>
 
