--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 	    <div class="well" id="about">
 	      <h2>About</h2>
+	      <img class="center-block photo" src="img/photo.jpg" alt="Photo of Jane Doe, MAssage Therapist">
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
 	    <div class="well" id="offerings">
