Added feedback form, switched out photo and name

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jane Doe Massage Therapy">
+    <meta name="description" content="Janet Majors Massage Therapy">
     <meta name="author" content="Portland Code School Team">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Jane Doe | Massage Therapy</title>
+    <title>Janet Majors | Massage Therapy</title>
 
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Jane Doe | Massage Therapy</a>
+          <a class="navbar-brand" href="#">Janet Majors | Massage Therapy</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -67,7 +67,7 @@
 
 	    <div class="well" id="about">
 	      <h2>About</h2>
-	      <img class="center-block photo" src="img/photo.jpg" alt="Photo of Jane Doe, MAssage Therapist">
+	      <img class="center-block photo" src="img/janetphoto.jpg" alt="Photo of Janet Majors, Massage Therapist">
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
 	    <div class="well" id="offerings">
@@ -93,7 +93,7 @@
 	      <div class="map">
 	      	<p>We are located at:</p>
 	      		<address>
-						  <strong>Jane Doe, Massage Therapy</strong><br>
+						  <strong>Janet Majors, Massage Therapy</strong><br>
 						  1771 NW Pettygrove St<br>
 						  Suite 140<br>
 						  Portland, OR 97209<br>
@@ -115,7 +115,9 @@
 	    </div>
 	    <div class="well" id="feedback">
 	      <h2>Feedback</h2>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	      <div class="form">
+	      	<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	      </div>
 	    </div>
 
 	    <hr>
