Fixed Offerings layout

--- a/index.html
+++ b/index.html
@@ -70,20 +70,45 @@
 	      <img class="center-block photo" src="img/janetphoto.jpg" alt="Photo of Janet Majors, Massage Therapist">
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
+
 	    <div class="well" id="offerings">
 	      <h2>Offerings</h2>
 	      <p>Here is a list of services offered:</p>
-	      <h3>Basic Massage</h3>
-	      <p>One hour long basic massage. $90</p>
-	      <h3>Invigorating Massage</h3>
-	      <p>Invigoration massage treatment. $90</p>
-	      <h3>Relaxing Massage</h3>
-	      <p>Relaxing massage treatment. $90</p>
-	      <h3>Deep Tissue Massage</h3>
-	      <p>Deep tissue massage treatment. $120</p>
-	      <h3>Hot Stone Massage</h3>
-	      <p>Massage treatment using hot stones. $150</p>
+
+				<div class="row items">
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Basic Massage</h3>
+	      		<p>One hour long basic massage. $90</p>
+	        </div>
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Invigorating Massage</h3>
+	      		<p>Invigorating massage treatment. $90</p>
+	      	</div>
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Relaxing Massage</h3>
+	      		<p>Relaxing massage treatment. $90</p>
+	        </div>
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Deep Tissue Massage</h3>
+	      		<p>Deep tissue massage treatment. $120</p>
+	        </div>
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Hot Stone Massage</h3>
+	      		<p>Massage treatment using hot stones. $150</p>
+	        </div>
+	        <div class="col-md-2">
+	        	<img src="img/MassageLogo2.png">
+	          <h3>Double Feature Massage</h3>
+	      		<p>Massage treatment package for two individuals. $175</p>
+	        </div>
+	      </div>
 	    </div>
+
 	    <div class="well" id="hours">
 	      <h2>Hours</h2>
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
@@ -129,7 +154,7 @@
 
     </div> <!-- /container -->
 
-    <div class="container location">
+    <div class="container">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
