--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
 
 				<div class="row items">
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone1.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone1.jpg" alt="Stone Icon">
 	          <h3>Basic Massage</h3>
 	      		<p>One hour long basic massage. $90</p>
 	        </div>
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone2.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone2.jpg" alt="Stone Icon">
 	          <h3>Invigorating Massage</h3>
 	      		<p>Invigorating massage treatment. $90</p>
 	      	</div>
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone3.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone3.jpg" alt="Stone Icon">
 	          <h3>Relaxing Massage</h3>
 	      		<p>Relaxing massage treatment. $90</p>
 	        </div>
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone4.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone4.jpg" alt="Stone Icon">
 	          <h3>Deep Tissue Massage</h3>
 	      		<p>Deep tissue massage treatment. $120</p>
 	        </div>
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone5.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone5.jpg" alt="Stone Icon">
 	          <h3>Hot Stone Massage</h3>
 	      		<p>Massage treatment using hot stones. $150</p>
 	        </div>
 	        <div class="col-md-2">
-	        	<img class="stone" src="img/stone6.jpg" alt="Stone Icon">
+	        	<img class="stone pulse" src="img/stone6.jpg" alt="Stone Icon">
 	          <h3>Double Feature Massage</h3>
 	      		<p>Massage treatment package for two individuals. $175</p>
 	        </div>
