--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
 
-	    <div class="well" id="offerings">
+	    <div class="well offerings" id="offerings">
 	      <h2>Offerings</h2>
 	      <p>Here is a list of services offered:</p>
 
@@ -103,7 +103,7 @@
 	        </div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone6.jpg" alt="Stone Icon">
-	          <h3>Double Feature Massage</h3>
+	          <h3>Double Feature</h3>
 	      		<p>Massage treatment package for two individuals. $175</p>
 	        </div>
 	      </div>
