--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
 
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -148,14 +147,19 @@
 	    <hr>
 
 		  <footer>
-		    <p>&copy; Company 2014</p>
+		  	<div class="socialmedia">
+		  		<a href="http://www.facebook.com"><img src="img/facebook.png" alt="Facebook Icon"></a>
+		  		<a href="http://www.twitter.com"><img src="img/twitter.png" alt-"Twitter Icon"></a>
+		  		<a href="http://www.linkedin.com"><img src="img/linkedin.png" alt="Linked In Icon"></a>
+		    	<p>&copy; Portland Code School Team Armine and Jessica 2014</p>
+		    </div>
 		  </footer>
 
 
     </div> <!-- /container -->
 
+<!--
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
           <h2>Heading</h2>
@@ -169,6 +173,7 @@
        </div>
       </div>
     </div>
+ -->
 
 
 
