--- a/index.html
+++ b/index.html
@@ -109,11 +109,21 @@
 	      </div>
 	    </div>
 
-	    <div class="well" id="hours">
+<div class="row items">
+	        <div class="col-md-4">
+	    <div class="well info" id="hours">
 	      <h2>Hours</h2>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	      <p>Monday: Closed</p>
+	      <p>Tuesday: Closed</p>
+	      <p>Wednesday: 8 AM - 12 PM</p>
+	      <p>Thursday: 8 AM - 3 PM</p>
+	      <p>Friday: 8 AM - 3 PM</p>
+	      <p>Saturday: 8 AM - 5 PM</p>
+	      <p>Sunday: 10 AM - 5 PM</p>
 	    </div>
-	    <div class="well" id="location">
+	    </div>
+	    <div class="col-md-4">
+	    <div class="well info" id="location">
 	      <h2>Location</h2>
 	      <div class="map">
 	      	<p>We are located at:</p>
@@ -129,10 +139,13 @@
 	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
 	      </div>
 	    </div>
-
-	    <div class="well" id="contact">
+	    </div>
+	    <div class="col-md-4">
+	    <div class="well info" id="contact">
 	      <h2>Contact</h2>
 	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+	    </div>
+	    </div>
 	    </div>
 	    <div class="well" id="links">
 	      <h2>Links</h2>
