Added Header text

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
   <body role="document">
 
+    <div class="header-text">
+      <h1>Janet Majors</h1>
+      <h2>Massage Therapy</h2>
+    </div>
+
     <div class="container-fluid banner">
       <div class="row-fluid">
         <div class="span12">
