Linked Header Text and Logo

--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
 
   <body role="document">
 
+    <div class="header-logo">
+    	<a href="index.html">
+    		<img src="img/MassageLogo2.png">
+    	</a>
+    </div>
+
     <div class="header-text">
-      <h1>Janet Majors</h1>
-      <h2>Massage Therapy</h2>
+      <a href="index.html">
+	      <h1>Janet Majors</h1>
+	      <h2>Massage Therapy</h2>
+	    </a>
     </div>
 
     <div class="container-fluid banner">
