Fixed banner image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container-fluid banner">
       <div class="row-fluid">
         <div class="span12">
-          <img src="img/banner.jpg" alt="Banner image of massage rocks.">
+          <img src="img/banner2.jpg" alt="Banner image of massage rocks.">
         </div>
       </div>
     </div>
