--- a/index-4-29-14-pre-combine.html
+++ b/index-4-29-14-pre-combine.html
@@ -121,54 +121,35 @@
 	      </div>
 	    </div>
 
-<div class="row items">
-	        <div class="col-md-3">
-	    <div class="well info" id="hours">
+	    <div class="well" id="hours">
 	      <h2>Hours</h2>
-	      <p>Monday: Closed</p>
-	      <p>Tuesday: Closed</p>
-	      <p>Wednesday: 8 AM - 12 PM</p>
-	      <p>Thursday: 8 AM - 3 PM</p>
-	      <p>Friday: 8 AM - 3 PM</p>
-	      <p>Saturday: 8 AM - 5 PM</p>
-	      <p>Sunday: 10 AM - 5 PM</p>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
-	    </div>
-	    <div class="col-md-6">
-	    <div class="well info" id="location">
+	    <div class="well" id="location">
 	      <h2>Location</h2>
 	      <div class="map">
-	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
-	      </div>
-	    </div>
-	    </div>
-	    <div class="col-md-3">
-	    <div class="well info" id="contact">
-	      <h2>Contact</h2>
+	      	<p>We are located at:</p>
 	      		<address>
 						  <strong>Janet Majors, Massage Therapy</strong><br>
 						  1771 NW Pettygrove St<br>
 						  Suite 140<br>
 						  Portland, OR 97209<br>
 						  <abbr title="Phone">P:</abbr> (503) 555-1234
-						Email: <a href="mailto:janetmajors@massage.com">janetmajors@massagetherapy.com</a>
 						</address>
+	      </div>
+	      <div class="map">
+	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
+	      </div>
 	    </div>
-	    </div>
+
+	    <div class="well" id="contact">
+	      <h2>Contact</h2>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
 	    <div class="well" id="links">
 	      <h2>Links</h2>
-	      <p>A special thank you to the following instructional websites and image sources:</p>
-				<p><a href="https://www.flickr.com/photos/josefeliciano/">Jose Feliciano </a>- Header Image</p>
-				<p><a href="https://www.flickr.com/photos/rkramer62/">Rachel Kramer </a>- Image Source</p>
-				<p><a href="http://ianlunn.github.io/Hover/">Ian Lunn </a>- Hover Effect Code</p>
-				<p><a href="http://subtlepatterns.com/mooning/">Joel Klein </a>- Background Image</p>
-				<p><a href="http://picons.me/download-social.php">http://picons.me/download-social.php </a>- Social Media Icons</p>
-				<p><a href="http://getbootstrap.com/">http://getbootstrap.com/ </a>- Bootstrap Template</p>
-				<p><a href="https://teamtreehouse.com/">https://teamtreehouse.com/ </a>- Tutorials</p>
-				<p><a href="http://www.portlandcodeschool.com/">http://www.portlandcodeschool.com/ </a>- Guidance</p>
+	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
 	    </div>
-
 	    <div class="well" id="feedback">
 	      <h2>Feedback</h2>
 	      <div class="form">
