--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <body role="document">
 
+  	<!-- Header Section -->
     <div class="header-logo">
     	<a href="index.html">
     		<img src="img/MassageLogo2.png">
@@ -48,7 +49,7 @@
       </div>
     </div>
 
-    <!-- Fixed navbar -->
+    <!-- Navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -121,41 +122,44 @@
 	      </div>
 	    </div>
 
-<div class="row items">
-	        <div class="col-md-3">
-	    <div class="well info" id="hours">
-	      <h2>Hours</h2>
-	      <p>Monday: Closed</p>
-	      <p>Tuesday: Closed</p>
-	      <p>Wednesday: 8 AM - 12 PM</p>
-	      <p>Thursday: 8 AM - 3 PM</p>
-	      <p>Friday: 8 AM - 3 PM</p>
-	      <p>Saturday: 8 AM - 5 PM</p>
-	      <p>Sunday: 10 AM - 5 PM</p>
-	    </div>
-	    </div>
-	    <div class="col-md-6">
-	    <div class="well info" id="location">
-	      <h2>Location</h2>
-	      <div class="map">
-	      	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
-	      </div>
-	    </div>
-	    </div>
-	    <div class="col-md-3">
-	    <div class="well info" id="contact">
-	      <h2>Contact</h2>
-	      		<address>
-						  <strong>Janet Majors, Massage Therapy</strong><br>
-						  1771 NW Pettygrove St<br>
-						  Suite 140<br>
-						  Portland, OR 97209<br>
-						  <abbr title="Phone">P:</abbr> (503) 555-1234
-						Email: <a href="mailto:janetmajors@massage.com">janetmajors@massagetherapy.com</a>
-						</address>
-	    </div>
-	    </div>
-	    </div>
+	    <div class="well three">
+				<div class="row items">
+	        <div class="col-md-4">
+	    			<div class="well info" id="hours">
+				      <h2>Hours</h2>
+				      <p>Monday: Closed</p>
+				      <p>Tuesday: Closed</p>
+				      <p>Wednesday: 8 AM - 12 PM</p>
+				      <p>Thursday: 8 AM - 3 PM</p>
+				      <p>Friday: 8 AM - 3 PM</p>
+				      <p>Saturday: 8 AM - 5 PM</p>
+				      <p>Sunday: 10 AM - 5 PM</p>
+	    			</div>
+	    		</div>
+	    		<div class="col-md-4">
+	    			<div class="well info" id="location">
+	      			<h2>Location</h2>
+	      			<div class="map">
+	      				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
+	      			</div>
+	    			</div>
+	    		</div>
+	    		<div class="col-md-4">
+	    			<div class="well info" id="contact">
+	      			<h2>Contact</h2>
+	      			<address>
+							  <strong>Janet Majors, Massage Therapy</strong><br>
+							  1771 NW Pettygrove St<br>
+							  Suite 140<br>
+							  Portland, OR 97209<br>
+							  <abbr title="Phone">P:</abbr> (503) 555-1234<br>
+								<a href="mailto:janetmajors@massage.com">janetmajors@massagetherapy.com</a>
+							</address>
+	    			</div>
+	    		</div>
+				</div>
+			</div>
+
 	    <div class="well" id="links">
 	      <h2>Links</h2>
 	      <p>A special thank you to the following instructional websites and image sources:</p>
