--- a/index.html
+++ b/index.html
@@ -81,49 +81,49 @@
 	    <div class="well" id="about">
 	      <h2>About</h2>
 	      <img class="center-block photo" src="img/janetphoto.jpg" alt="Photo of Janet Majors, Massage Therapist">
-	      <p>Janet has been providing massage therapy relief for 6 years. She's passionate about working with her clients closely until they reach thier ultimate state of relaxation. Janet keeps up to date with new massage therapy techniques. She graduated from the Massage Therapy School of Portland in 2007 and continues for yearly training. She also attends the Massage Therapy Relief for American tradeshow every year.</p>
+	      <p>Janet Majors has been providing massage therapy relief for six years. She's passionate about working with her clients closely until they reach their ultimate state of relaxation. Janet keeps up to date with new massage therapy techniques. She graduated from the Massage Therapy School of Portland in 2007 and continues for yearly training. She also attends the Massage Therapy Relief for American trade show every year.</p>
 	    </div>
 
 	    <div class="well offerings" id="offerings">
 	      <h2>Offerings</h2>
-	      <p>Here is a list of services offered:</p>
+	      <p>We are please to offer the following services:</p>
 
 				<div class="row items">
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone1.jpg" alt="Stone Icon">
 	          <h3>Deep Tissue Massage</h3>
 	      		<p>This massage goes beyond the surface of the skin and underlying soft tissue to deep areas of the muscle and right to the “belly” of the muscle.</p>
-	      		<p>$90 per hour.</p>
+	      		<p>$90 per hour</p>
 	        </div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone2.jpg" alt="Stone Icon">
 	          <h3>Reiki Massage</h3>
-	      		<p>A Japanese technique for stress reduction and relaxation that promotes healing. Reiki is powerful, simple.</p> 
-	      		<p>$90 per hour.</p>
+	      		<p>A Japanese technique for stress reduction and relaxation that promotes healing. Reiki is powerful and simple.</p> 
+	      		<p>$90 per hour</p>
 	      	</div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone3.jpg" alt="Stone Icon">
 	          <h3>Shiatsu Massage</h3>
-	      		<p>This technique incorporates the pressure of fingers, palms, elbows, knees and feet that unblocks the flow of life energy at specific acupuncture points and restores balance.</p>
-	      		<p>$90 per hour.</p>
+	      		<p>This technique incorporates the pressure of fingers, palms, elbows, knees, and feet. It unblocks the flow of life energy at specific acupuncture points and restores balance.</p>
+	      		<p>$90 per hour</p>
 	        </div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone4.jpg" alt="Stone Icon">
 	          <h3>Sports Massage</h3>
-	      		<p>Used as a preventive medicine for many athletes before, during and after sporting events. Provides relaxation before an athletic event can prepare the athlete for increased performance.  
-	      		<p>$120 per hour.</p>
+	      		<p>Used as a preventive medicine for many athletes before, during, and after sporting events. Provides relaxation before an athletic event.  
+	      		<p>$120 per hour</p>
 	        </div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone5.jpg" alt="Stone Icon">
 	          <h3>Hot Stone Massage</h3>
 	      		<p>An incredible massage that gives your blood vessels an ebb and flow affect (hot and cold).</p>
-	      		<p>$150 per hour.</p>
+	      		<p>$150 per hour</p>
 	        </div>
 	        <div class="col-md-2">
 	        	<img class="stone pulse" src="img/stone6.jpg" alt="Stone Icon">
 	          <h3>Swedish Massage</h3>
 	      		<p>Combines several techniques including kneading, rolling, effleurage, petrissage, friction, percussive and taping strokes to aid in stress and tension reduction and remove toxic wastes.</p>
-	      		<p>$175</p>
+	      		<p>$175 per hour</p>
 	        </div>
 	      </div>
 	    </div>
