Ran code through w3 validator, made minor corrections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Janet Majors Massage Therapy">
     <meta name="author" content="Portland Code School Team">
@@ -12,7 +11,7 @@
     <title>Janet Majors | Massage Therapy</title>
 
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +29,7 @@
   	<!-- Header Section -->
     <div class="header-logo">
     	<a href="index.html">
-    		<img src="img/MassageLogo2.png">
+    		<img src="img/MassageLogo2.png" alt="Logo">
     	</a>
     </div>
 
@@ -182,7 +181,7 @@
 	    <div class="well" id="feedback">
 	      <h2>Feedback</h2>
 	      <div class="form">
-	      	<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	      	<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500">Loading...</iframe>
 	      </div>
 	    </div>
 
@@ -191,7 +190,7 @@
 		  <footer>
 		  	<div class="socialmedia">
 		  		<a href="http://www.facebook.com"><img src="img/facebook.png" alt="Facebook Icon"></a>
-		  		<a href="http://www.twitter.com"><img src="img/twitter.png" alt-"Twitter Icon"></a>
+		  		<a href="http://www.twitter.com"><img src="img/twitter.png" alt="Twitter Icon"></a>
 		  		<a href="http://www.linkedin.com"><img src="img/linkedin.png" alt="Linked In Icon"></a>
 		    	<p>&copy; Portland Code School Team Armine and Jessica 2014</p>
 		    </div>
