More minor code cleanup

--- a/index.html
+++ b/index.html
@@ -1,173 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Janet Majors Massage Therapy">
-    <meta name="author" content="Portland Code School Team">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Janet Majors Massage Therapy">
+		<meta name="author" content="Portland Code School Team">
+		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Janet Majors | Massage Therapy</title>
+		<title>Janet Majors | Massage Therapy</title>
 
-    <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css'>
+		<!-- Google Fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css'>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap theme -->
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+		<!-- Bootstrap theme -->
+		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/massagetheme.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="css/massagetheme.css" rel="stylesheet">
 
-  </head>
+	</head>
 
-  <body role="document">
+	<body role="document">
 
-  	<!-- Header Section -->
-    <div class="header-logo">
-    	<a href="index.html">
-    		<img src="img/MassageLogo2.png" alt="Logo">
-    	</a>
-    </div>
+		<!-- Header Section -->
+		<div class="header-logo">
+			<a href="index.html">
+				<img src="img/MassageLogo2.png" alt="Logo">
+			</a>
+		</div>
 
-    <div class="header-text">
-      <a href="index.html">
-	      <h1>Janet Majors</h1>
-	      <h2>Massage Therapy</h2>
-	    </a>
-    </div>
+		<div class="header-text">
+			<a href="index.html">
+				<h1>Janet Majors</h1>
+				<h2>Massage Therapy</h2>
+			</a>
+		</div>
 
-    <div class="container-fluid banner">
-      <div class="row-fluid">
-        <div class="span12">
-          <img src="img/banner2.jpg" alt="Banner image of massage rocks.">
-        </div>
-      </div>
-    </div>
+		<div class="container-fluid banner">
+			<div class="row-fluid">
+				<div class="span12">
+					<img src="img/banner2.jpg" alt="Banner image of massage rocks.">
+				</div>
+			</div>
+		</div>
+		<!-- End Header Section -->
 
-    <!-- Navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Janet Majors | Massage Therapy</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#offerings">Offerings</a></li>
-            <li><a href="#hours">Hours</a></li>
-            <li><a href="#location">Location</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#feedback">Feedback</a></li>            
-          </ul>
-        </div> <!-- .nav-collapse-->
-      </div>
-    </div>
+		<!-- Navbar -->
+		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Janet Majors | Massage Therapy</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="#about">About</a></li>
+						<li><a href="#offerings">Offerings</a></li>
+						<li><a href="#hours">Hours</a></li>
+						<li><a href="#location">Location</a></li>
+						<li><a href="#contact">Contact</a></li>
+						<li><a href="#links">Links</a></li>
+						<li><a href="#feedback">Feedback</a></li>						
+					</ul>
+				</div> <!-- .nav-collapse-->
+			</div>
+		</div>
+		<!-- End Navbar -->
 
+		<!-- Main Container -->
+		<div class="container main" role="main">
 
-    <div class="container main" role="main">
+			<div class="well" id="about">
+				<h2>About</h2>
+				<img class="center-block photo" src="img/janetphoto.jpg" alt="Photo of Janet Majors, Massage Therapist">
+				<p>Janet Majors has been providing massage therapy relief for six years. She's passionate about working with her clients closely until they reach their ultimate state of relaxation. Janet keeps up to date with new massage therapy techniques. She graduated from the Massage Therapy School of Portland in 2007 and continues for yearly training. She also attends the Massage Therapy Relief for American trade show every year.</p>
+			</div>
 
-	    <div class="well" id="about">
-	      <h2>About</h2>
-	      <img class="center-block photo" src="img/janetphoto.jpg" alt="Photo of Janet Majors, Massage Therapist">
-	      <p>Janet Majors has been providing massage therapy relief for six years. She's passionate about working with her clients closely until they reach their ultimate state of relaxation. Janet keeps up to date with new massage therapy techniques. She graduated from the Massage Therapy School of Portland in 2007 and continues for yearly training. She also attends the Massage Therapy Relief for American trade show every year.</p>
-	    </div>
-
-	    <div class="well offerings" id="offerings">
-	      <h2>Offerings</h2>
-	      <p>We are please to offer the following services:</p>
+			<div class="well offerings" id="offerings">
+				<h2>Offerings</h2>
+				<p>We are please to offer the following services:</p>
 
 				<div class="row items">
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone1.jpg" alt="Stone Icon">
-	          <h3>Deep Tissue Massage</h3>
-	      		<p>This massage goes beyond the surface of the skin and underlying soft tissue to deep areas of the muscle and right to the “belly” of the muscle.</p>
-	      		<p>$90 per hour</p>
-	        </div>
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone2.jpg" alt="Stone Icon">
-	          <h3>Reiki Massage</h3>
-	      		<p>A Japanese technique for stress reduction and relaxation that promotes healing. Reiki is powerful and simple.</p> 
-	      		<p>$90 per hour</p>
-	      	</div>
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone3.jpg" alt="Stone Icon">
-	          <h3>Shiatsu Massage</h3>
-	      		<p>This technique incorporates the pressure of fingers, palms, elbows, knees, and feet. It unblocks the flow of life energy at specific acupuncture points and restores balance.</p>
-	      		<p>$90 per hour</p>
-	        </div>
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone4.jpg" alt="Stone Icon">
-	          <h3>Sports Massage</h3>
-	      		<p>Used as a preventive medicine for many athletes before, during, and after sporting events. Provides relaxation before an athletic event.  
-	      		<p>$120 per hour</p>
-	        </div>
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone5.jpg" alt="Stone Icon">
-	          <h3>Hot Stone Massage</h3>
-	      		<p>An incredible massage that gives your blood vessels an ebb and flow affect (hot and cold).</p>
-	      		<p>$150 per hour</p>
-	        </div>
-	        <div class="col-md-2">
-	        	<img class="stone pulse" src="img/stone6.jpg" alt="Stone Icon">
-	          <h3>Swedish Massage</h3>
-	      		<p>Combines several techniques including kneading, rolling, effleurage, petrissage, friction, percussive and taping strokes to aid in stress and tension reduction and remove toxic wastes.</p>
-	      		<p>$175 per hour</p>
-	        </div>
-	      </div>
-	    </div>
-
-	    <div class="well three">
-				<div class="row items">
-	        <div class="col-md-4">
-	    			<div class="well info" id="hours">
-				      <h2>Hours</h2>
-				      <p>Monday: Closed</p>
-				      <p>Tuesday: Closed</p>
-				      <p>Wednesday: 8 AM - 12 PM</p>
-				      <p>Thursday: 8 AM - 3 PM</p>
-				      <p>Friday: 8 AM - 3 PM</p>
-				      <p>Saturday: 8 AM - 5 PM</p>
-				      <p>Sunday: 10 AM - 5 PM</p>
-	    			</div>
-	    		</div>
-	    		<div class="col-md-4">
-	    			<div class="well info" id="location">
-	      			<h2>Location</h2>
-	      			<div class="map">
-	      				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
-	      			</div>
-	    			</div>
-	    		</div>
-	    		<div class="col-md-4">
-	    			<div class="well info" id="contact">
-	      			<h2>Contact</h2>
-	      			<address>
-							  <strong>Janet Majors, Massage Therapy</strong><br>
-							  1771 NW Pettygrove St<br>
-							  Suite 140<br>
-							  Portland, OR 97209<br>
-							  <abbr title="Phone">P:</abbr> (503) 555-1234<br>
-								<a href="mailto:janetmajors@massage.com">janetmajors@massagetherapy.com</a>
-							</address>
-	    			</div>
-	    		</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone1.jpg" alt="Stone Icon">
+						<h3>Deep Tissue Massage</h3>
+						<p>This massage goes beyond the surface of the skin and underlying soft tissue to deep areas of the muscle and right to the “belly” of the muscle.</p>
+						<p>$90 per hour</p>
+					</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone2.jpg" alt="Stone Icon">
+						<h3>Reiki Massage</h3>
+						<p>A Japanese technique for stress reduction and relaxation that promotes healing. Reiki is powerful and simple.</p> 
+						<p>$90 per hour</p>
+					</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone3.jpg" alt="Stone Icon">
+						<h3>Shiatsu Massage</h3>
+						<p>This technique incorporates the pressure of fingers, palms, elbows, knees, and feet. It unblocks the flow of life energy at specific acupuncture points and restores balance.</p>
+						<p>$90 per hour</p>
+					</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone4.jpg" alt="Stone Icon">
+						<h3>Sports Massage</h3>
+						<p>Used as a preventive medicine for many athletes before, during, and after sporting events. Provides relaxation before an athletic event.	
+						<p>$120 per hour</p>
+					</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone5.jpg" alt="Stone Icon">
+						<h3>Hot Stone Massage</h3>
+						<p>An incredible massage that gives your blood vessels an ebb and flow affect (hot and cold).</p>
+						<p>$150 per hour</p>
+					</div>
+					<div class="col-md-2">
+						<img class="stone pulse" src="img/stone6.jpg" alt="Stone Icon">
+						<h3>Swedish Massage</h3>
+						<p>Combines several techniques including kneading, rolling, effleurage, petrissage, friction, percussive and taping strokes to aid in stress and tension reduction and remove toxic wastes.</p>
+						<p>$175 per hour</p>
+					</div>
 				</div>
 			</div>
 
-	    <div class="well" id="links">
-	      <h2>Links</h2>
-	      <p>A special thank you to the following instructional websites and image sources:</p>
+			<div class="well three">
+				<div class="row items">
+					<div class="col-md-4">
+						<div class="well info" id="hours">
+							<h2>Hours</h2>
+							<p>Monday: Closed</p>
+							<p>Tuesday: Closed</p>
+							<p>Wednesday: 8 AM - 12 PM</p>
+							<p>Thursday: 8 AM - 3 PM</p>
+							<p>Friday: 8 AM - 3 PM</p>
+							<p>Saturday: 8 AM - 5 PM</p>
+							<p>Sunday: 10 AM - 5 PM</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="well info" id="location">
+							<h2>Location</h2>
+							<div class="map">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2794.871000978553!2d-122.68929589999999!3d45.53280139999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549509fc952cea4f%3A0xd5741509fe314eb!2s1771+NW+Pettygrove+St+%23140!5e0!3m2!1sen!2sus!4v1398726632666" width="400" height="300" style="border:0"></iframe>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="well info" id="contact">
+							<h2>Contact</h2>
+							<address>
+								<strong>Janet Majors, Massage Therapy</strong><br>
+								1771 NW Pettygrove St<br>
+								Suite 140<br>
+								Portland, OR 97209<br>
+								<abbr title="Phone">P:</abbr> (503) 555-1234<br>
+								<a href="mailto:janetmajors@massage.com">janetmajors@massagetherapy.com</a>
+							</address>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="well" id="links">
+				<h2>Links</h2>
+				<p>A special thank you to the following instructional websites and image sources:</p>
 				<p><a href="https://www.flickr.com/photos/josefeliciano/">Jose Feliciano </a>- Header Image</p>
 				<p><a href="https://www.flickr.com/photos/rkramer62/">Rachel Kramer </a>- Image Source</p>
 				<p><a href="http://ianlunn.github.io/Hover/">Ian Lunn </a>- Hover Effect Code</p>
@@ -176,53 +178,33 @@
 				<p><a href="http://getbootstrap.com/">http://getbootstrap.com/ </a>- Bootstrap Template</p>
 				<p><a href="https://teamtreehouse.com/">https://teamtreehouse.com/ </a>- Tutorials</p>
 				<p><a href="http://www.portlandcodeschool.com/">http://www.portlandcodeschool.com/ </a>- Guidance</p>
-	    </div>
+			</div>
 
-	    <div class="well" id="feedback">
-	      <h2>Feedback</h2>
-	      <div class="form">
-	      	<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500">Loading...</iframe>
-	      </div>
-	    </div>
+			<div class="well" id="feedback">
+				<h2>Feedback</h2>
+				<div class="form">
+					<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500">Loading...</iframe>
+				</div>
+			</div>
 
-	    <hr>
+			<hr>
 
-		  <footer>
-		  	<div class="socialmedia">
-		  		<a href="http://www.facebook.com"><img src="img/facebook.png" alt="Facebook Icon"></a>
-		  		<a href="http://www.twitter.com"><img src="img/twitter.png" alt="Twitter Icon"></a>
-		  		<a href="http://www.linkedin.com"><img src="img/linkedin.png" alt="Linked In Icon"></a>
-		    	<p>&copy; Portland Code School Team Armine and Jessica 2014</p>
-		    </div>
-		  </footer>
+			<footer>
+				<div class="socialmedia">
+					<a href="http://www.facebook.com"><img src="img/facebook.png" alt="Facebook Icon"></a>
+					<a href="http://www.twitter.com"><img src="img/twitter.png" alt="Twitter Icon"></a>
+					<a href="http://www.linkedin.com"><img src="img/linkedin.png" alt="Linked In Icon"></a>
+					<p>&copy; Portland Code School Team Armine and Jessica 2014</p>
+				</div>
+			</footer>
+		</div> 
+		<!-- End Container -->
 
-
-    </div> <!-- /container -->
-
-<!--
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-      </div>
-    </div>
- -->
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
-  </body>
+		<!-- Bootstrap core JavaScript
+		================================================== -->
+		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/docs.min.js"></script>
+	</body>
 </html>
