--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Janet Majors Massage Therapy">
 		<meta name="author" content="Portland Code School Team">
-		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="img/stonelogo.ico" type="image/x-icon">
+		<link rel="icon" href="img/stonelogo.ico" type="image/x-icon">
 
 		<title>Janet Majors | Massage Therapy</title>
 
@@ -29,14 +29,15 @@
 		<!-- Header Section -->
 		<div class="header-logo">
 			<a href="index.html">
-				<img src="img/MassageLogo2.png" alt="Logo">
+				<img src="img/stonelogo-new1.png" alt="Logo">
 			</a>
 		</div>
 
 		<div class="header-text">
 			<a href="index.html">
-				<h1>Janet Majors</h1>
-				<h2>Massage Therapy</h2>
+				<h1>Janet<br>
+				Majors</h1>
+				<h2>Massage</h2>
 			</a>
 		</div>
 
